add added the styles

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>My First Assignment</title>
 </head>
+
 <body>
     <div class="header">
         <main>
@@ -14,7 +16,9 @@
                     <h1>Let's make beautiful flowers a part of your life.</h1>
                 </div>
                 <div class="para">
-                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page
+                        when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
+                        distribution of letters.</p>
                 </div>
                 <div class="button">
                     <button>Buy Now</button>
@@ -24,6 +28,78 @@
                 <img class="profile-pic" src="images\pngwing 10.png" alt="">
             </div>
         </main>
+
     </div>
+    <div>
+        <div class="title">
+            <h2>Our Featured Flowers</h2>
+        </div>
+        <div class="per">
+            <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+                looking at its layout.</p>
+        </div>
+    </div>
+
+    <div class="leftSide">
+        <div>
+            <div class="img"><img src="images/pngwing 6.png" alt=""></div>
+            <div class="text">
+                <p>Pink Flower Tree</p>
+            </div>
+        </div>
+
+    </div>
+    <div class="leftSide">
+        <div class="img"><img src="images/pngwing 5.png" alt=""></div>
+        <div class="text">
+            <p>Pink Flower Tree</p>
+        </div>
+    </div>
+    <div class="leftSide">
+        <div class="img"><img src="images/pngwing 7.png" alt=""></div>
+        <div class="text">
+            <p>Pink Flower Tree</p>
+        </div>
+    </div>
+    <div>`
+        <div class="img"><img src="images/Group 58.png" alt=""></div>
+        <div class="text">
+            <p>Fresh Flowers. Local Growers.</p>
+        </div>
+    </div>
+    <div>`
+        <div class="img"><img src="images/Group 57.png" alt=""></div>
+        <div class="text">
+            <p>Same Day Delivery. Click & Collect.</p>
+        </div>
+    </div>
+    <div>`
+        <div class="img"><img src="images/Group 59.png" alt=""></div>
+        <div class="text">
+            <p>24/7 Free Support.</p>
+        </div>
+    </div>
+
+    <div class="header">
+        <main>
+            <div class="leftSide">
+                <div class="title">
+                    <h2>Hot Deal ! Sale Up To 25% Off</h2>
+                </div>
+                <div class="para">
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page
+                        when looking at its layout.</p>
+                </div>
+                <div class="button">
+                    <button>Sign Up</button>
+                </div>
+            </div>
+            <div class="rightSide">
+                <img class="profile-pic" src="images\pngwing 8.png" alt="">
+            </div>
+   
 </body>
+
+
+
 </html>
