--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="header">
-        <main>
+        <main class="marg">
             <div class="leftSide">
                 <div class="title">
                     <h1>Let's make beautiful flowers a part of your life.</h1>
@@ -27,77 +27,66 @@
             <div class="rightSide">
                 <img class="profile-pic" src="images\pngwing 10.png" alt="">
             </div>
-        </main>
+
 
     </div>
-    <div>
+    <div class="flowerText">
         <div class="title">
             <h2>Our Featured Flowers</h2>
         </div>
         <div class="per">
-            <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+            <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page
+                when
                 looking at its layout.</p>
         </div>
     </div>
 
-    <div class="leftSide">
-        <div>
-            <div class="img"><img src="images/pngwing 6.png" alt=""></div>
+
+
+
+    <div class="flower marg">
+        <div class="leftSide">
+            <div class="flowerimg1">
+                <div class="img"><img src="images/pngwing 7.png" alt=""></div>
+
+            </div>
+            <div class="text">
+                <p>Pink Flower Tree</p>
+            </div>
+
+        </div>
+        <div class="leftSide">
+            <div class="flowerimg2">
+                <div class="img"><img src="images/pngwing 5.png" alt=""></div>
+
+            </div>
+            <div class="text">
+                <p>Pink Flower Tree</p>
+            </div>
+        </div>
+        <div class="leftSide">
+            <div class="flowerimg3">
+                <div class="img"><img src="images/pngwing 6.png" alt=""></div>
+
+            </div>
             <div class="text">
                 <p>Pink Flower Tree</p>
             </div>
         </div>
 
     </div>
-    <div class="leftSide">
-        <div class="img"><img src="images/pngwing 5.png" alt=""></div>
-        <div class="text">
-            <p>Pink Flower Tree</p>
+    
+    <footer>
+        <div class="last">
+            <h2>
+                <span class="fl">FLOWER</span><span class="sho">SHOP</span>
+            </h2>
+            <p style="color: #d1cece;">It is a long established fact that a reader will be distracted by the readable
+                <br> content of a page when looking at its layout.</p>
+            <span class="copyright">@2020-2023, FlowerShop.com. All rights reserved.</span>
         </div>
-    </div>
-    <div class="leftSide">
-        <div class="img"><img src="images/pngwing 7.png" alt=""></div>
-        <div class="text">
-            <p>Pink Flower Tree</p>
-        </div>
-    </div>
-    <div>`
-        <div class="img"><img src="images/Group 58.png" alt=""></div>
-        <div class="text">
-            <p>Fresh Flowers. Local Growers.</p>
-        </div>
-    </div>
-    <div>`
-        <div class="img"><img src="images/Group 57.png" alt=""></div>
-        <div class="text">
-            <p>Same Day Delivery. Click & Collect.</p>
-        </div>
-    </div>
-    <div>`
-        <div class="img"><img src="images/Group 59.png" alt=""></div>
-        <div class="text">
-            <p>24/7 Free Support.</p>
-        </div>
-    </div>
+    </footer>
 
-    <div class="header">
-        <main>
-            <div class="leftSide">
-                <div class="title">
-                    <h2>Hot Deal ! Sale Up To 25% Off</h2>
-                </div>
-                <div class="para">
-                    <p>It is a long established fact that a reader will be distracted by the readable content of a page
-                        when looking at its layout.</p>
-                </div>
-                <div class="button">
-                    <button>Sign Up</button>
-                </div>
-            </div>
-            <div class="rightSide">
-                <img class="profile-pic" src="images\pngwing 8.png" alt="">
-            </div>
-   
 </body>
 
 
